2016-12-11  Karl Berry  <karl@freefriends.org>

	* tex4ht-fonts-noncjk.tex ([g]version 2..18): eliminate
	right-justified %'s, typos.

	* tex4ht-fonts-modern.tex (rm-lm): copyright for
	tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/rm-lm.htf.

2016-12-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-modern.tex
	(tex4ht.dir/texmf/tex4ht/ht-fonts/unicode/lm/rm-lm.htf,
	tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/rm-lmt.htf,
	tex4ht.dir/texmf/tex4ht/ht-fonts/alias/lm/rm-lmvt.htf):
	Typewriter lmodern fonts in OT1 encoding containded wrong
	backslashes and other characters.
	
2016-12-10  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht): There was catcode issue with 
	`:` character, it was 11 instead of 12.
	* tex4ht-4ht.tex (fontspec-4ht.lua): There could be Lua error caused
	by some fonts.
	https://puszcza.gnu.org.ua/bugs/?123

2016-12-09  Karl Berry  <karl@freefriends.org>

	* tex4ht-env.tex: copyright 2016.

	* tex4ht-4ht.tex (usepackage.4ht): |<TeX4ht copyright|>
	not copywrite, so the full notice is inserted.
	
2016-12-08  Karl Berry  <karl@freefriends.org>

	* tex4ht-cond4ht.tex (mktex4ht.4ht): copyright 2016.

2016-12-07  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-env.tex (tex4ht.env): moved default picture conversion
	scripts below alternative scripts, in order to enable their
	selection with -c option of t4ht.

2016-12-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (fontspec.4ht, fontspec-luatex.4ht,
	fontspec-xetex.4ht): moved luatex and xetex definitions for
	fontspec to fontspec-xetex.4ht and fontspec-luatex.4ht.
	* mktex4ht-cnf.tex (mktex4ht.4ht): added fontspec-luatex.

2016-12-03  Karl Berry  <karl@freefriends.org>

	* .svnignore (fontspec-4ht.lua): add.
	
	* Makefile (tex4ht_4ht_derived),
	* mktex4ht-cnf.tex,
	* tex4ht-4ht.tex: rename xetex-fontspec.4ht to fontspec-xetex.4ht.

	* tex4ht-4ht.tex (fontspec.4ht, fontspec-4ht.lua, fontspec-xetex.4ht),