@@ -1,3 +1,8 @@
+2016-12-13  Michal Hoftich  <michal.h21@gmail.com>
+
+	* tex4ht-4ht.tex (colortbl.4ht): Use xcolor.sty commands 
+	to convert color specifications to CSS
+
 2016-12-11  Karl Berry  <karl@freefriends.org>
 
 	* tex4ht-fonts-noncjk.tex ([g]version 2..18): eliminate
